objects/V_ODATA_QBO_RT_COUNTRIES__x.object
<CustomObject>
    <fields>
        <fullName>CANCEL_DATE__c</fullName>
        <description>CANCEL_DATE</description>
        <externalDeveloperName>CANCEL_DATE</externalDeveloperName>
        <label>CANCEL_DATE</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>COMPANY_ADDRESS_LINES__c</fullName>
        <description>COMPANY_ADDRESS_LINES</description>
        <externalDeveloperName>COMPANY_ADDRESS_LINES</externalDeveloperName>
        <label>COMPANY_ADDRESS_LINES</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>COMPANY_CITY__c</fullName>
        <description>COMPANY_CITY</description>
        <externalDeveloperName>COMPANY_CITY</externalDeveloperName>
        <label>COMPANY_CITY</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COMPANY_COUNTRY__c</fullName>
        <description>COMPANY_COUNTRY</description>
        <externalDeveloperName>COMPANY_COUNTRY</externalDeveloperName>
        <label>COMPANY_COUNTRY</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COMPANY_EMAIL__c</fullName>
        <description>COMPANY_EMAIL</description>
        <externalDeveloperName>COMPANY_EMAIL</externalDeveloperName>
        <label>COMPANY_EMAIL</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>COMPANY_ID__c</fullName>
        <description>COMPANY_ID</description>
        <externalDeveloperName>COMPANY_ID</externalDeveloperName>
        <label>COMPANY_ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>COMPANY_NAME__c</fullName>
        <description>COMPANY_NAME</description>
        <externalDeveloperName>COMPANY_NAME</externalDeveloperName>
        <label>COMPANY_NAME</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>COMPANY_PHONE_NUMBER__c</fullName>
        <description>COMPANY_PHONE_NUMBER</description>
        <externalDeveloperName>COMPANY_PHONE_NUMBER</externalDeveloperName>
        <label>COMPANY_PHONE_NUMBER</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>COMPANY_POSTAL_CODE__c</fullName>
        <description>COMPANY_POSTAL_CODE</description>
        <externalDeveloperName>COMPANY_POSTAL_CODE</externalDeveloperName>
        <label>COMPANY_POSTAL_CODE</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COMPANY_STATE__c</fullName>
        <description>COMPANY_STATE</description>
        <externalDeveloperName>COMPANY_STATE</externalDeveloperName>
        <label>COMPANY_STATE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSSG_SUSPEND_DATE__c</fullName>
        <description>CSSG_SUSPEND_DATE</description>
        <externalDeveloperName>CSSG_SUSPEND_DATE</externalDeveloperName>
        <label>CSSG_SUSPEND_DATE</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CURRENT_SOURCE_CODE__c</fullName>
        <description>CURRENT_SOURCE_CODE</description>
        <externalDeveloperName>CURRENT_SOURCE_CODE</externalDeveloperName>
        <label>CURRENT_SOURCE_CODE</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FIRST_CHARGE_DATE__c</fullName>
        <description>FIRST_CHARGE_DATE</description>
        <externalDeveloperName>FIRST_CHARGE_DATE</externalDeveloperName>
        <label>FIRST_CHARGE_DATE</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GLOBAL_AUTH_ID__c</fullName>
        <description>GLOBAL_AUTH_ID</description>
        <externalDeveloperName>GLOBAL_AUTH_ID</externalDeveloperName>
        <label>GLOBAL_AUTH_ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MASTER_EMAIL__c</fullName>
        <description>MASTER_EMAIL</description>
        <externalDeveloperName>MASTER_EMAIL</externalDeveloperName>
        <label>MASTER_EMAIL</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MASTER_FIRST_NAME__c</fullName>
        <description>MASTER_FIRST_NAME</description>
        <externalDeveloperName>MASTER_FIRST_NAME</externalDeveloperName>
        <label>MASTER_FIRST_NAME</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MASTER_LAST_NAME__c</fullName>
        <description>MASTER_LAST_NAME</description>
        <externalDeveloperName>MASTER_LAST_NAME</externalDeveloperName>
        <label>MASTER_LAST_NAME</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MASTER_USER_ID__c</fullName>
        <description>MASTER_USER_ID</description>
        <externalDeveloperName>MASTER_USER_ID</externalDeveloperName>
        <label>MASTER_USER_ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NEXT_CHARGE_DATE__c</fullName>
        <description>NEXT_CHARGE_DATE</description>
        <externalDeveloperName>NEXT_CHARGE_DATE</externalDeveloperName>
        <label>NEXT_CHARGE_DATE</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ORIGINAL_SKU__c</fullName>
        <description>ORIGINAL_SKU</description>
        <externalDeveloperName>ORIGINAL_SKU</externalDeveloperName>
        <label>ORIGINAL_SKU</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PLAN_NAME__c</fullName>
        <description>PLAN_NAME</description>
        <externalDeveloperName>PLAN_NAME</externalDeveloperName>
        <label>PLAN_NAME</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>REGION_ID__c</fullName>
        <description>REGION_ID</description>
        <externalDeveloperName>REGION_ID</externalDeveloperName>
        <label>REGION_ID</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SKU__c</fullName>
        <description>SKU</description>
        <externalDeveloperName>SKU</externalDeveloperName>
        <label>SKU</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SUBSCRIBE_DATE__c</fullName>
        <description>SUBSCRIBE_DATE</description>
        <externalDeveloperName>SUBSCRIBE_DATE</externalDeveloperName>
        <label>SUBSCRIBE_DATE</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TRIAL_CREATE_DATE__c</fullName>
        <description>TRIAL_CREATE_DATE</description>
        <externalDeveloperName>TRIAL_CREATE_DATE</externalDeveloperName>
        <label>TRIAL_CREATE_DATE</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TRIAL_END_DATE__c</fullName>
        <description>TRIAL_END_DATE</description>
        <externalDeveloperName>TRIAL_END_DATE</externalDeveloperName>
        <label>TRIAL_END_DATE</label>
        <type>DateTime</type>
    </fields>
</CustomObject>